updates forms and views

--- a/tango_project/templates/rango/category.html
+++ b/tango_project/templates/rango/category.html
@@ -18,6 +18,8 @@
 		{%endif%}
 
 		<a href = "/rango/about">(\m/)</a>
-
+		<br>
+		<a href = "/rango/add_page/{{category_name}}">Click here to add a New Page to this Category </a>
+		
 	</body>
 </html>
