--- a/tango_project/templates/rango/index.html
+++ b/tango_project/templates/rango/index.html
@@ -18,6 +18,7 @@
 		{%endif%}
 
 		<a href = "/rango/about">Click here to go to about page.</a>
-
+		<br>
+		<a href = "/rango/add_category/{{category_name}}">Click here to add a New Category </a>
 	</body>
 </html>
